// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a clickable Card 1`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="card"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <button
        aria-pressed="false"
        class="c4"
        data-blade-component="card-link-overlay"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a linkable Card 1`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="card"
    href="https://google.com"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <a
        aria-pressed="false"
        class="c4"
        data-blade-component="card-link-overlay"
        href="https://google.com"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a linkable Card with onClick 1`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="card"
    href="https://google.com"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <a
        aria-pressed="false"
        class="c4"
        data-blade-component="card-link-overlay"
        href="https://google.com"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render an interactive Card 1`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px hsla(227,100%,59%,1);
  cursor: initial;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: -webkit-transform,box-shadow;
  -webkit-transition-property: transform,box-shadow;
  transition-property: transform,box-shadow;
}

.c1.c1.c1.c1.c1:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="card"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <button
        aria-pressed="true"
        class="c4"
        data-blade-component="card-link-overlay"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;
